--- a/ITPE3200X/Views/Shared/_PostPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_PostPartial.cshtml
@@ -14,12 +14,12 @@
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="postOptionsMenu-@Model.PostId">
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" asp-controller="Home" asp-action="EditPost" asp-route-postId="@Model.PostId">
+                            <a class="dropdown-item d-flex align-items-center" asp-controller="Home" asp-action="" asp-route-postId="@Model.PostId">
                                 <i class="bi bi-pencil me-2"></i> Edit
                             </a>
                         </li>
                         <li>
-                            <form asp-action="DeletePost" asp-controller="Home" asp-route-postId="@Model.PostId" method="post" onsubmit="return confirm('Are you sure you want to delete this post?');">
+                            <form asp-action="DeletePost" asp-controller="Home" asp-route-postId="@Model.PostId" asp-route-homefeed="@Model.HomeFeed" method="post" onsubmit="return confirm('Are you sure you want to delete this post?');">
                                 <button type="submit" class="dropdown-item d-flex align-items-center">
                                     <i class="bi bi-trash me-2 text-danger"></i> Delete
                                 </button>
@@ -64,8 +64,16 @@
                 <!-- Profile Picture and Account Name -->
                 <div class="profile-info d-flex align-items-center">
                     <a class="nav-link" style="padding: 0;" asp-controller="Profile" asp-action="Profile" asp-route-username="@Model.UserName">
-                        <img src="@(Model.ProfilePicture)" alt="Profile Picture" class="rounded-circle profile-picture">
-                        <span class="username">@Model.UserName</span>
+                        @if (string.IsNullOrEmpty(Model.ProfilePicture))
+                        {
+                            <i class="bi bi-person-circle" style="font-size: 2rem; color: #7cbeea;"></i>
+                            <span class="username">@Model.UserName</span>
+                        }
+                        else
+                        {
+                            <img src="@(Model.ProfilePicture)" alt="Profile Picture" class="rounded-circle profile-picture">
+                            <span class="username">@Model.UserName</span>
+                        }
                     </a>
                 </div>
 
