--- a/ITPE3200X/Views/Shared/_PostPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_PostPartial.cshtml
@@ -66,7 +66,7 @@
                     <a class="nav-link" style="padding: 0;" asp-controller="Profile" asp-action="Profile" asp-route-username="@Model.UserName">
                         @if (string.IsNullOrEmpty(Model.ProfilePicture))
                         {
-                            <i class="bi bi-person-circle" style="font-size: 2rem; color: #7cbeea;"></i>
+                            <i class="bi bi-person-circle" style="font-size: 2rem; color: #7cbeea;"></i> <!-- Default Profile Picture, needs css fix -->
                             <span class="username">@Model.UserName</span>
                         }
                         else
