--- a/ITPE3200X/Views/Home/Index.cshtml
+++ b/ITPE3200X/Views/Home/Index.cshtml
@@ -7,6 +7,8 @@
 <div class="container">
     @foreach (var post in Model)
     {
-        <partial name="_PostPartial" model="post" />
+        <div id="post-@post.PostId">
+            <partial name="_PostPartial" model="post" />
+        </div>
     }
 </div>
