--- a/ITPE3200X/Views/Shared/_SideMenuPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_SideMenuPartial.cshtml
@@ -4,7 +4,7 @@
 @inject UserManager<ApplicationUser> UserManager
 
 @{
-    var user = await UserManager.GetUserAsync(User);
+var user = await UserManager.GetUserAsync(User);
 }
 
 <!-- Making different nav bar if the user is logged in or not -->
@@ -15,20 +15,29 @@
         <div class="text-center p-3 w-100">
             @if (!string.IsNullOrEmpty(user.ProfilePictureUrl))
             {
-                <img src="@user.ProfilePictureUrl" alt="Profile Picture" style="height: 100px; border-radius: 1em"/>
-                <h3 class="text-white p-3" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">@user.UserName</h3>
+            <img src="@user.ProfilePictureUrl" alt="Profile Picture" style="height: 100px; border-radius: 1em"/>
+            <h3 class="text-white p-3" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">@user.UserName</h3>
             }
             else
             {
-                <i class="bi bi-person-circle" style="font-size: 100px; color: #7cbeea;"></i>
-                <h3 class="text-white p-3">@user.UserName</h3>
+            <i class="bi bi-person-circle" style="font-size: 100px; color: #7cbeea;"></i>
+            <h3 class="text-white p-3">@user.UserName</h3>
             }
         </div>
         <ul class="nav flex-column text-left w-100" style="font-size: 1.4rem;">
-            <li class="nav-item mt-3"><a id="home" class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" title="Home View">Home</a>
-            <li class="nav-item mt-3"><a id="profile" class="nav-link" asp-area="" asp-controller="Profile" asp-action="Profile" title="Profile View">Profile</a></li>
-            <li class="nav-item mt-3"><a id="saved" class="nav-link" asp-area="" asp-controller="Home" asp-action="SavedPosts" title="Saved Posts View">Saved</a></li>
-            <li class="nav-item mt-3"><a id="settings" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Settings</a></li>
+            <!-- Update the home link to point to the new HomePage -->
+            <li class="nav-item mt-3">
+                <a id="home" class="nav-link" asp-area="" asp-controller="Home" asp-action="HomePage" title="Home View">Home</a>
+            </li>
+            <li class="nav-item mt-3">
+                <a id="profile" class="nav-link" asp-area="" asp-controller="Profile" asp-action="Profile" title="Profile View">Profile</a>
+            </li>
+            <li class="nav-item mt-3">
+                <a id="saved" class="nav-link" asp-area="" asp-controller="Home" asp-action="SavedPosts" title="Saved Posts View">Saved</a>
+            </li>
+            <li class="nav-item mt-3">
+                <a id="settings" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Settings</a>
+            </li>
         </ul>
     </div>
     }
@@ -36,8 +45,12 @@
     {
     <div id="side-menu" style="background-color: rgba(124,190,234,0.08); padding: 1em 0 1em; height: calc(100vh - 60px);">
         <ul class="nav flex-column text-left w-100" style="font-size: 1.4rem;">
-            <li class="nav-item mt-3"><a id="home" class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" title="Home View">Home</a>
-            <li class="nav-item mt-3"><a id="login" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login" title="Login">Login</a></li>
+            <li class="nav-item mt-3">
+                <a id="home" class="nav-link" asp-area="" asp-controller="Home" asp-action="HomePage" title="Home View">Home</a>
+            </li>
+            <li class="nav-item mt-3">
+                <a id="login" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login" title="Login">Login</a>
+            </li>
         </ul>
     </div>
     }
@@ -47,9 +60,3 @@
         }
     </style>
 </div>
-
-
-
-
-
-
