--- a/ITPE3200X/Views/Home/SavedPosts.cshtml
+++ b/ITPE3200X/Views/Home/SavedPosts.cshtml
@@ -8,7 +8,7 @@
     @foreach (var post in Model)
     {
         <div id="post-@post.PostId">
-            <partial name="_PostPartial" model="post" />
+            <partial name="~/Views/Home/HomePage.cshtml" model="Model" />
         </div>
     }
 </div>
