--- a/ITPE3200X/Views/Profile/Profile.cshtml
+++ b/ITPE3200X/Views/Profile/Profile.cshtml
@@ -119,7 +119,7 @@
                         <div class="modal-dialog modal-xl modal-dialog-centered">
                             <div class="modal-content">
                                 <div id="post-@post.PostId">
-                                    <partial name="_PostPartial" model="post" />
+                                    <partial name="~/Views/Home/HomePage.cshtml" model="Model" />
                                 </div>
                             </div>
                         </div>
