diff styling changes, most important are the active menus and fixing post scaling issues

--- a/ITPE3200X/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -11,3 +11,16 @@
         </form>
     </li>
 </ul>
+
+<style>
+    /* Active page indicator on load */
+    #profile.active, #email.active, #change-password.active, #personal-data.active {
+        background-color: rgba(155, 155, 155, 0.16) !important;
+        color: #7cbeea !important;
+        border-left: 3px solid #7cbeea !important;
+    }
+
+    .nav-item:hover {
+        background-color: rgba(155, 155, 155, 0.16);
+    }
+</style>
