--- a/ITPE3200X/Views/Profile/Profile.cshtml
+++ b/ITPE3200X/Views/Profile/Profile.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Profile Page";
 }
 
-<div class="profile-page bg-dark text-light py-5" style="background-color: #222; color: #fff;">
+<div class="profile-page bg-transparent text-light py-5" style="background-color: #222; color: #fff;">
     <div class="container">
         <!-- Profile Section -->
         <div class="row align-items-center justify-content-center mb-5">
