--- a/ITPE3200X/Views/Shared/_Layout.cshtml
+++ b/ITPE3200X/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 </head>
 <body>
 <header class="sticky-top">
-    <nav class="navbar navbar-expand-md navbar-toggleable-md navbar-light bg-dark py-1 mb-0" style="box-shadow: 0 6px 8px -4px lightblue;">
+    <nav class="navbar navbar-expand-md navbar-toggleable-md navbar-light py-1 mb-0" style="box-shadow: 0 6px 8px -4px lightblue; background-color: #1A1A1A">
         <div class="container-fluid">
             <a class="navbar-brand text-white fs-4 px-3" asp-area="" asp-controller="Home" asp-action="Index">
                 <img src="~/Icons-images/icon.png" alt="Kage Icon" style="height: 1.4em; vertical-align: middle; margin-right: 5px;"><class></class>
