--- a/ITPE3200X/Views/Home/Index.cshtml
+++ b/ITPE3200X/Views/Home/Index.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Home Page";
 }
 
+<div class="container text-center my-4">
+    <h1>Home Page</h1>
+</div>
 <div class="container">
     @foreach (var post in Model)
     {
