--- a/ITPE3200X/wwwroot/css/site.css
+++ b/ITPE3200X/wwwroot/css/site.css
@@ -11,7 +11,7 @@ html {
 }
 
 body{
-  background: #212529 !important;
+  background: #1D1D1D !important;
   color: #f6f6f6 !important;
 }
 
@@ -59,103 +59,15 @@ i:active, form:active {
   box-shadow: 0 0.18em 0.9em 0 rgba(250, 250, 250, 0.7) !important; /* Subtle shadow for lifted effect */
 }
 
-.nav-item.active {
-  color: #7cbeea;
-  background-color: rgba(155, 155, 155, 0.16);
-}
-
-.nav-pills .nav-link.active {
-  background-color: #7cbeea !important;
-}
-
-.nav-link.active {
-  color: #212529 !important;
-}  /* why the f does this or the one above not change the active menu text color... */
-
 .nav-link {
   color: #ffffff !important;
-}
-
-.nav-item:hover {
-  background-color: rgba(155, 155, 155, 0.16);
 }
 
 .form-label {
   color: #212529;
 }
 
-/* Hamburger button animation */
 
-.animated-icon1 {
-  width: 30px;
-  height: 20px;
-  position: relative;
-  margin: 0px;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
-}
-
-.animated-icon1 span {
-  display: block;
-  position: absolute;
-  height: 3px;
-  width: 100%;
-  border-radius: 9px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
-}
-
-.animated-icon1 span {
-  background: #f5f5f5;
-}
-
-.animated-icon1 span:nth-child(1) {
-  top: 0px;
-}
-
-.animated-icon1 span:nth-child(2) {
-  top: 10px;
-}
-
-.animated-icon1 span:nth-child(3) {
-  top: 20px;
-}
-
-.animated-icon1.open span:nth-child(1) {
-  top: 11px;
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
-  transform: rotate(135deg);
-}
-
-.animated-icon1.open span:nth-child(2) {
-  opacity: 0;
-  left: 60px;
-}
-
-.animated-icon1.open span:nth-child(3) {
-  top: 11px;
-  -webkit-transform: rotate(-135deg);
-  -moz-transform: rotate(-135deg);
-  -o-transform: rotate(-135deg);
-  transform: rotate(-135deg);
-}
  /* Force remove the outline on the hamburger button in bootstrap library */
 .navbar-toggler:focus,
 .navbar-toggler:active,
@@ -206,6 +118,9 @@ i:active, form:active {
   display: flex;
   align-items: start;
   z-index: 2;
+  position: absolute;
+  right: 0;
+  bottom: 1px;
 }
 
 .post-actions .btn {
@@ -244,6 +159,11 @@ i:active, form:active {
   top: 10px;
   right: 10px;
   z-index: 2;
+}
+
+#post-profile-pic {
+  height: 3.5em !important;
+  width: 3.5em !important;
 }
 
 /* Media query to scale the profile image down on smaller screens */
