--- a/ITPE3200X/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -14,7 +14,7 @@
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="w-100 btn btn-lg settingbtn mb-3" type="submit">Download</button>
+            <button class="w-100 btn btn-lg loginbtn-primary mb-3" type="submit">Download</button>
         </form>
         <p>
             <a id="delete" asp-page="DeletePersonalData" class="w-100 btn btn-lg btn-danger">Delete</a>
