--- a/ITPE3200X/Views/Profile/Profile.cshtml
+++ b/ITPE3200X/Views/Profile/Profile.cshtml
@@ -1,4 +1,7 @@
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model ITPE3200X.ViewModels.ProfileViewModel
+@inject SignInManager<ApplicationUser> SignInManager
 
 @{
     ViewData["Title"] = "Profile Page";
@@ -10,7 +13,7 @@
         <div class="row align-items-center justify-content-center mb-5">
             <!-- Profile Image -->
             <div class="col-md-4 col-lg-3 text-center text-md-start mb-4 mb-md-0 d-flex justify-content-center">
-                @if (!string.IsNullOrEmpty(Model.User.ProfilePictureUrl))
+                @if (!string.IsNullOrEmpty(Model.User!.ProfilePictureUrl))
                 {
                     <img src="@Model.User.ProfilePictureUrl" alt="Profile Picture" class="profile-picture"
                          style="width: 200px; height: 200px; object-fit: cover; border-radius: 1.2em; border: none; aspect-ratio: 1/1; margin-right: 2em;" />
@@ -38,44 +41,54 @@
                         @Model.Posts?.Count Posts
                     </span>
                     <span class="post-info" style="font-size: clamp(1em, 2vw, 1.4em); color: #bbb; margin: 0 1em;">
-                        @Model.User.Followers?.Count Followers
+                        @Model.User.Followers.Count Followers
                     </span>
                     <span class="post-info" style="font-size: clamp(1em, 2vw, 1.4em); color: #bbb; margin: 0 1em;">
-                        @Model.User.Following?.Count Following
+                        @Model.User.Following.Count Following
                     </span>
                 </div>
 
                 <!-- Buttons Section -->
                 <div class="d-flex justify-content-center justify-content-md-start">
-                    @if (Model.IsCurrentUserProfile)
+                    @if (SignInManager.IsSignedIn(User))
                     {
-                        <!-- Edit Profile and Create Post Buttons for the current user -->
-                        <a class="btn loginbtn-primary btn-lg me-3 w-50"
-                           asp-controller="Profile" asp-action="Edit"
-                           style="width: 50%;">Edit Profile</a>
-                        <a class="btn btn-secondary btn-lg w-50"
-                           asp-controller="Profile" asp-action="CreatePost"
-                           style="width: 50%;">Create Post</a>
-                    }
-                    else
-                    {
-                        <!-- Follow/Unfollow Button for other users -->
-                        @if (Model.IsFollowing)
+                        @if (Model.IsCurrentUserProfile)
                         {
-                            <form asp-controller="Profile" asp-action="Unfollow" method="post" class="w-100">
-                                <input type="hidden" name="username" value="@Model.User.UserName" />
-                                <button type="submit" class="btn loginbtn-secondary btn-lg w-100"
-                                        style="width: 100%;">Unfollow</button>
-                            </form>
+                            <!-- Edit Profile and Create Post Buttons for the current user -->
+                            <a class="btn loginbtn-primary btn-lg me-3 w-50"
+                               asp-controller="Profile" asp-action="Edit"
+                               style="width: 50%;">Edit Profile</a>
+                            <a class="btn btn-secondary btn-lg w-50"
+                               asp-controller="Post" asp-action="CreatePost"
+                               style="width: 50%;">Create Post</a>
                         }
                         else
                         {
-                            <form asp-controller="Profile" asp-action="Follow" method="post" class="w-100">
-                                <input type="hidden" name="username" value="@Model.User.UserName" />
-                                <button type="submit" class="btn loginbtn-primary btn-lg w-100"
-                                        style="width: 100%;">Follow</button>
-                            </form>
+                            <!-- Follow/Unfollow Button for other users -->
+                            @if (Model.IsFollowing)
+                            {
+                                <form asp-controller="Profile" asp-action="Unfollow" method="post" class="w-100">
+                                    <input type="hidden" name="username" value="@Model.User.UserName"/>
+                                    <button type="submit" class="btn loginbtn-secondary btn-lg w-100"
+                                            style="width: 100%;">Unfollow</button>
+                                </form>
+                            }
+                            else
+                            {
+                                <form asp-controller="Profile" asp-action="Follow" method="post" class="w-100">
+                                    <input type="hidden" name="username" value="@Model.User.UserName"/>
+                                    <button type="submit" class="btn loginbtn-primary btn-lg w-100"
+                                            style="width: 100%;">Follow</button>
+                                </form>
+                            }
                         }
+                    }
+                    else
+                    {
+                        <!-- Login Button for non-logged in users -->
+                        <a class="btn loginbtn-primary btn-lg w-100"
+                           asp-area="Identity" asp-page="/Account/Login"
+                           style="width: 100%;">Login to Follow</a>
                     }
                 </div>
             </div>
@@ -106,7 +119,7 @@
                         <div class="card h-100 border-0">
                             <!-- Link image to modal -->
                             <a href="#" data-bs-toggle="modal" data-bs-target="#postModal-@post.PostId">
-                                <img src="@post.Images.FirstOrDefault()?.ImageUrl"
+                                <img src="@post.Images!.FirstOrDefault()?.ImageUrl"
                                      alt="Post Image"
                                      class="card-img-top"
                                      style="width: 100%; aspect-ratio: 3/4; object-fit: cover; background-color: black;" />
