--- a/ITPE3200X/Views/Shared/_PostPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_PostPartial.cshtml
@@ -18,12 +18,12 @@
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="postOptionsMenu-@Model.PostId">
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" asp-controller="Home" asp-action="EditPost" asp-route-postId="@Model.PostId">
+                            <a class="dropdown-item d-flex align-items-center" asp-controller="Post" asp-action="EditPost" asp-route-postId="@Model.PostId">
                                 <i class="bi bi-pencil me-2"></i> Edit
                             </a>
                         </li>
                         <li>
-                            <form asp-action="DeletePost" asp-controller="Home" asp-route-postId="@Model.PostId" asp-route-homefeed="@Model.HomeFeed" method="post" onsubmit="return confirm('Are you sure you want to delete this post?');">
+                            <form asp-action="DeletePost" asp-controller="Post" asp-route-postId="@Model.PostId" asp-route-homefeed="@Model.HomeFeed" method="post" onsubmit="return confirm('Are you sure you want to delete this post?');">
                                 <button type="submit" class="dropdown-item d-flex align-items-center">
                                     <i class="bi bi-trash me-2 text-danger"></i> Delete
                                 </button>
@@ -34,7 +34,7 @@
             }
             <div id="carouselPostImages-@Model.PostId" class="carousel slide">
                 <!-- Indicators -->
-                @if (Model.Images.Count > 1)
+                @if (Model.Images!.Count > 1)
                 {
                     <div class="carousel-indicators" style="position: absolute; top: 10px;">
                         @for (int i = 0; i < Model.Images.Count; i++)
@@ -90,7 +90,7 @@
                     </button>
 
                     <!-- Like Button -->
-                    <form asp-action="ToggleLike" asp-controller="Home" asp-route-postId="@Model.PostId" method="post" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#post-@Model.PostId" class="d-inline">
+                    <form asp-action="ToggleLike" asp-controller="Post" asp-route-postId="@Model.PostId" method="post" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#post-@Model.PostId" class="d-inline">
                         @Html.AntiForgeryToken()
                         @if (Model.IsLikedByCurrentUser)
                         {
@@ -109,7 +109,7 @@
                     </form>
 
                     <!-- Save Button -->
-                    <form asp-action="ToggleSave" asp-controller="Home" asp-route-postId="@Model.PostId" method="post" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#post-@Model.PostId" class="d-inline">
+                    <form asp-action="ToggleSave" asp-controller="Post" asp-route-postId="@Model.PostId" method="post" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#post-@Model.PostId" class="d-inline">
                         @Html.AntiForgeryToken()
                         @if (Model.IsSavedByCurrentUser)
                         {
@@ -153,7 +153,7 @@
             <div class="collapse" id="commentsSection-@Model.PostId">
                 <div id="comments-section-@Model.PostId">
                     <ul class="list-group list-group-flush">
-                        @foreach (var comment in Model.Comments)
+                        @foreach (var comment in Model.Comments!)
                         {
                             <li class="list-group-item pb-3">
                                 <!-- First Line: Username, Time, and Action Buttons -->
@@ -170,7 +170,7 @@
 
                                             <!-- Delete Button -->
                                             <form asp-action="DeleteComment"
-                                                  asp-controller="Home"
+                                                  asp-controller="Post"
                                                   asp-route-postId="@Model.PostId"
                                                   asp-route-commentId="@comment.CommentId"
                                                   method="post"
@@ -200,7 +200,7 @@
                                                 <h5 class="modal-title" id="editCommentModalLabel-@comment.CommentId">Edit Comment</h5>
                                             </div>
                                             <form asp-action="EditComment"
-                                                  asp-controller="Home"
+                                                  asp-controller="Post"
                                                   asp-route-postId="@Model.PostId"
                                                   asp-route-commentId="@comment.CommentId"
                                                   asp-route-homefeed="@Model.HomeFeed"
@@ -233,7 +233,7 @@
                     <!-- Add Comment Form -->
                     @if (SignInManager.IsSignedIn(User))
                     {
-                    <form asp-action="AddComment" asp-controller="Home" asp-route-postId="@Model.PostId" method="post" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#post-@Model.PostId" class="comment-form">
+                    <form asp-action="AddComment" asp-controller="Post" asp-route-postId="@Model.PostId" method="post" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#post-@Model.PostId" class="comment-form">
                         @Html.AntiForgeryToken()
                         <div class="input-group mt-3">
                             <input type="text" name="Content" class="form-control bg-dark text-white border-dark" placeholder="Add a comment..." required />
