--- a/ITPE3200X/Views/Shared/_Layout.cshtml
+++ b/ITPE3200X/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                 <img src="~/Icons-images/icon.png" alt="Kage Icon" style="height: 1.4em; vertical-align: middle; margin-right: 5px;"><class></class>
                 Kage
             </a>
-            <button class="navbar-toggler first-button collapsed" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                <div class="animated-icon1"><span></span><span></span><span></span></div>
+                <i class="bi bi-list"></i> <!-- Use only the Bootstrap icon -->
             </button>
             <div class="navbar-collapse collapse d-md-flex justify-content-between flex-row-reverse">
                 <partial name="_NavLoginPartial"/>
