--- a/ITPE3200X/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Login.cshtml
@@ -12,7 +12,7 @@ ViewData["Title"] = "Log in/register";
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
 </head>
-<body class="vw-100 overflow-hidden">
+<body class="vh-100">
 <a asp-page="/Index" class="btn-close btn-close-white" aria-label="Close" style="position: absolute; top: 2rem; left: 2rem; font-size: 1.8rem;"></a>
 <div class="container">
     <div class="row vh-100 justify-content-center align-items-center" style="padding-bottom: 5em"> <!-- Have to add padding to counter margin from main because of nav. Works with align-items for a responsive page. Other solutions are not responsive -->
